--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,17 @@
 spring:
+  config:
+    activate:
+      on-profile: local
   datasource:
     driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/likelionspring
     username: sa
     password:
-    url: jdbc:h2:tcp://localhost/~/likelionspring
 
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
